unpackaged/main/default/objects/Lead/fields/Contacted_Method__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Method__c</fullName>
    <label>Contacted Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Social Media Chat</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Website Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>