unpackaged/main/default/objects/Lead/fields/Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Education_Level__c</fullName>
    <label>Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Some High School</fullName>
            </value>
            <value>
                <fullName>High School Diploma</fullName>
            </value>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>Some College</fullName>
            </value>
            <value>
                <fullName>Some Trade School</fullName>
            </value>
            <value>
                <fullName>Trade School Certificate</fullName>
            </value>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Bachlors Degree</fullName>
            </value>
            <value>
                <fullName>Graduate Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>