unpackaged/main/default/objects/Lead/fields/FIN_Tuition_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Tuition_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FIN Tuition Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>