unpackaged/main/default/objects/Lead/fields/First_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>First_Form_Submitted__c</fullName>
    <description>Populated from Hubspot to indicate what form was first submitted by this person</description>
    <label>First Form Submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>