unpackaged/main/default/objects/Lead/fields/Preferred_Campus__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Campus__c</fullName>
    <label>Preferred Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raleigh Campus</fullName>
            </value>
            <value>
                <fullName>Online Campus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>