unpackaged/main/default/objects/Lead/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Picklist to represent Program types as Student (Lead) indicates during admissions. Field is read-only in SF screens as it is mapped and maintained via Hubspot.</description>
    <label>Campaign Name (Marketing)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>529 Plan</fullName>
            </value>
            <value>
                <fullName>bBIG</fullName>
            </value>
            <value>
                <fullName>Bilingual</fullName>
            </value>
            <value>
                <fullName>BOGO</fullName>
            </value>
            <value>
                <fullName>CiscoPro</fullName>
            </value>
            <value>
                <fullName>CONT. ED</fullName>
            </value>
            <value>
                <fullName>CWP Public</fullName>
            </value>
            <value>
                <fullName>CWP SkillBridge</fullName>
            </value>
            <value>
                <fullName>eCom</fullName>
            </value>
            <value>
                <fullName>HSIS</fullName>
            </value>
            <value>
                <fullName>HS Recruitment</fullName>
            </value>
            <value>
                <fullName>IT ProAdvanced</fullName>
            </value>
            <value>
                <fullName>IT ProBasic</fullName>
            </value>
            <value>
                <fullName>IT ProCareer</fullName>
            </value>
            <value>
                <fullName>IT ProOnline</fullName>
            </value>
            <value>
                <fullName>ITSA</fullName>
            </value>
            <value>
                <fullName>ITSE</fullName>
            </value>
            <value>
                <fullName>MCBA</fullName>
            </value>
            <value>
                <fullName>PHARM</fullName>
            </value>
            <value>
                <fullName>Recruit Military</fullName>
            </value>
            <value>
                <fullName>Voc Rehab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>