unpackaged/main/default/objects/Lead/fields/Program_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Program_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program of Interest</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>