unpackaged/main/default/objects/Lead/fields/Scheduled_Location__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Location__c</fullName>
    <label>Scheduled Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raleigh</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Indianapolis</fullName>
            </value>
            <value>
                <fullName>Arlington</fullName>
            </value>
            <value>
                <fullName>Live OnLine</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>On-site Event Consult</fullName>
            </value>
            <value>
                <fullName>Nellis AFB</fullName>
            </value>
            <value>
                <fullName>Sugar Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>