unpackaged/main/default/objects/Lead/fields/Scheduled_Method__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Method__c</fullName>
    <label>Scheduled Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Social Media Chat</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Website Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>