unpackaged/main/default/objects/Lead/fields/Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time__c</fullName>
    <label>Scheduled Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>09:00 AM</fullName>
            </value>
            <value>
                <fullName>09:15 AM</fullName>
            </value>
            <value>
                <fullName>9:30 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:15 AM</fullName>
            </value>
            <value>
                <fullName>10:30 AM</fullName>
            </value>
            <value>
                <fullName>10:45 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:15 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:15 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>1:15 PM</fullName>
            </value>
            <value>
                <fullName>1:30 PM</fullName>
            </value>
            <value>
                <fullName>1:45 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM</fullName>
            </value>
            <value>
                <fullName>2:15 PM</fullName>
            </value>
            <value>
                <fullName>2:30 PM</fullName>
            </value>
            <value>
                <fullName>3:00 pm</fullName>
            </value>
            <value>
                <fullName>3:15 PM</fullName>
            </value>
            <value>
                <fullName>3:30 PM</fullName>
            </value>
            <value>
                <fullName>4:00 PM</fullName>
            </value>
            <value>
                <fullName>4:15 PM</fullName>
            </value>
            <value>
                <fullName>4:30 PM</fullName>
            </value>
            <value>
                <fullName>5:00 PM</fullName>
            </value>
            <value>
                <fullName>5:15 PM</fullName>
            </value>
            <value>
                <fullName>5:30 PM</fullName>
            </value>
            <value>
                <fullName>6:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>