unpackaged/main/default/objects/Lead/fields/Scheduled_type__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_type__c</fullName>
    <label>Scheduled Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Campus</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hot Transfer</fullName>
            </value>
            <value>
                <fullName>On Site MCF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>