unpackaged/main/default/objects/Lead/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Columbus (Westerville), OH</fullName>
            </value>
            <value>
                <fullName>Fayetteville, NC - LIVE ONLINE</fullName>
            </value>
            <value>
                <fullName>DC/Baltimore - LIVE ONLINE</fullName>
            </value>
            <value>
                <fullName>New York Metro - LIVE ONLINE</fullName>
            </value>
            <value>
                <fullName>Austin, TX - LIVE ONLINE</fullName>
            </value>
            <value>
                <fullName>Dallas, TX</fullName>
            </value>
            <value>
                <fullName>Houston, TX</fullName>
            </value>
            <value>
                <fullName>Indianapolis, IN</fullName>
            </value>
            <value>
                <fullName>Raleigh, NC</fullName>
            </value>
            <value>
                <fullName>Charlotte, NC</fullName>
            </value>
            <value>
                <fullName>Arlington, TX</fullName>
            </value>
            <value>
                <fullName>Other Location - LIVE ONLINE</fullName>
            </value>
            <value>
                <fullName>Sugar Land, TX</fullName>
            </value>
            <value>
                <fullName>Nellis, NV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>