unpackaged/main/default/objects/Lead/fields/Showed__c.field-meta.xml
<CustomField>
    <fullName>Showed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Showed</label>
    <type>Checkbox</type>
</CustomField>