unpackaged/main/default/objects/Lead/fields/Showed_Date__c.field-meta.xml
<CustomField>
    <fullName>Showed_Date__c</fullName>
    <label>Showed Date</label>
    <type>Date</type>
</CustomField>