unpackaged/main/default/objects/Lead/fields/Showed_Location__c.field-meta.xml
<CustomField>
    <fullName>Showed_Location__c</fullName>
    <label>Showed Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arlington Campus</fullName>
                <label>Arlington</label>
            </value>
            <value>
                <fullName>Charlotte Campus</fullName>
                <label>Charlotte</label>
            </value>
            <value>
                <fullName>Columbus Campus</fullName>
                <label>Columbus</label>
            </value>
            <value>
                <fullName>Dallas Campus</fullName>
                <label>Dallas</label>
            </value>
            <value>
                <fullName>Holly Springs</fullName>
            </value>
            <value>
                <fullName>Houston Campus</fullName>
                <label>Houston</label>
            </value>
            <value>
                <fullName>Indy Campus</fullName>
                <label>Indianapolis</label>
            </value>
            <value>
                <fullName>Nellis AFB</fullName>
            </value>
            <value>
                <fullName>On_site_Event_Consult</fullName>
                <label>On-site Event Consult</label>
            </value>
            <value>
                <fullName>Raleigh Campus</fullName>
                <label>Raleigh</label>
            </value>
            <value>
                <fullName>Sugar Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>