unpackaged/main/default/objects/Lead/recordTypes/Student_Learner.recordType-meta.xml
<RecordType>
    <fullName>Student_Learner</fullName>
    <active>true</active>
    <businessProcess>Student Admissions</businessProcess>
    <label>Student / Learner</label>
</RecordType>